--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "async": "^0.9.0",
     "call-next-tick": "^1.1.2",
     "d3-shape": "^1.2.0",
+    "delaunay-triangulate": "^1.1.6",
     "jimp": "^0.2.28",
     "lodash.curry": "^4.1.1",
     "lodash.pluck": "^3.1.2",
+    "probable": "^2.1.1",
     "pureimage": "0.0.21",
     "standard-bail": "^2.0.1",
     "twit": "^1.1.20"
